# Pythium

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Dask_Testing.ipynb  Dockerfile  Histo_readme.md  MANIFEST.in  README.md  README_plot.md  Test.ipynb  codecov.yml  common_classes.py  common_tools.py  example_slimming_config.py  hist_vars.py  histogramming.py  histogramming_config.py  preprocess.py  pyproject.toml  required_packages.txt  setup.cfg  setup.py  slimming_classes.py  slimming_proto_config.py  storage_functions.py  test.ipynb  test.py  testing_grounds.py
.github/workflows/: ci.yaml
Histogramming/: cross_product_backend.py  hist_wrapper.py  histogramming_config.py  storage_functions.py  test.py
Trial_Data/: prw_gamma_mc16a.merged.root  prw_gamma_mc16d.merged.root  prw_gamma_mc16e.merged.root
configs/: StreamlineHistogrammingConfig.py  histogramming_config.py  sklim_config.py  tth_ICvSM_config.py  tth_ICvSM_histogramming_config.py  tth_config.py  tth_histogramming_config.py
dfclass_tests/: dfclass1.py  dfclass2.py  dfclass3.py  dfclass4.py  dfclass5.py  dfclass6.py  dfclass_final.py  test.h5  thbb_singletop_plus_HF.py
docs/: Makefile  make.bat  reqs.txt
docs/source/: Common.rst  CommonClasses.rst  CommonTools.rst  Logging.rst  Preprocessing.rst  Sklimming.rst  SklimmingClasses.rst  api.rst  common.rst  conf.py  configs.rst  getstarted.rst  histogramming.rst  index.rst  install.rst  sklimming.rst  usage.rst
fromBrian/: dask.ipynb
fromBrian/python/: dask_loader.py  dask_samples.py  load_dask.py  load_sample.py  make_plotbook.py  optimise_binning.py  process_samples.py  samples.py
fromBrian/python/configs/: dicts.py  samples.py  vars.py
fromBrian/python/plotting/: plot_1d.py  plot_1d_dask.py  (+3 more)
logging/: logger.py
misc/: logo.py  lorentz_functions.py  make_dummy_file.py
plotting_misc/: CMatrixPlot_test.ipynb  CR_ttb_prefit.yaml  Hist1D_test.ipynb  Hist1D_test_ttH.ipynb  ProjectionPlot_test.ipynb  PullPlot_test.ipynb  RatioPlot_test.ipynb  plot_classes.py  pythcorrmatrix_test.ipynb  pythprojection_test.ipynb  pythpullplot_test.ipynb  pythratio_test.ipynb  tHbb_v31_v3.txt  user_examples.py  yamlscript_dilep.py
plotting_misc/datafiles_and_parsers/: CR_ttc_prefit.yaml  textfile_data.py  yamlscript_corrmatrix.py  yamlscript_histdata.py
plotting_misc/old_tests/: pythratio_OLDtest.ipynb
plotting_misc/pickle_files/: gauss1.pkl  gauss2.pkl  gauss3.pkl  gauss4.pkl  gauss5.pkl  gauss_trice.pkl  rljet_L1_file.pkl  rljet_L2_file.pkl  rljet_L3_file.pkl  rljet_L4_file.pkl  rljet_L5_file.pkl  rljet_pt_comb_file.pkl
pyhf_tests/: plot_classes_copy.py  pyhf_tutorial.ipynb  tH_v34_v1.config
pythium/common/: tools.py
pythium/histogramming/: binning.py  objects.py
pythium/sklimming/: config.py
scripts/: cross_product.py  histogram.py  histogramming.py  sklim.py  test.py
scripts/common/: __init__.py  common_tools.py  logger.py
scripts/sklimming/: common_classes.py  common_tools.py  preprocess.py  slimming_classes.py  slimming_proto_config.py
src/pythium/: __init__.py
tests/histogramming/: expr_evaluator_test.py  hist_validation.py  input_paths_test.py  ndim_functors.py  observable_test.py  processor.py  test_processor.py
tests/sklimming/: Yields.csv
utils/: __init__.py  create_parquet.py  logger.py
utils/common/: branches.py  functor.py  samples.py  selection.py  tools.py  user_tools.py
utils/histogramming/: Managers.py  TaskManager.py  __init__.py  config.py  cross_product_backend.py  cross_product_functions.py  hist_wrapper.py  objects.py  processor.py  storage_functions.py
utils/sklimming/: __init__.py  config.py  reader.py  writer.py
yaml_scripts_tests/: CorrelationMatrix.yaml  boost_test1.ipynb  mplhep_test1.ipynb  plot_classes.py  plot_example.py  plotclass_test.ipynb  plt_plotter.ipynb  pythcorrmatrix_test.ipynb  pythpullplot_test.ipynb  pythratio_test.ipynb  tables_dilep.yaml  txt_parser.py  yamlscript_corrmatrix.py  yamlscript_dilep.py  yamlscript_histdata.py
yaml_scripts_tests/brian_plotting_code/: plotting.py
(+38 files in other folders)
