[build-system]
requires = ["setuptools>=46.4.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pythium"
authors = [{name = "Mohamed Aly", email = "mohamed.aly@cern.ch"},{name = "Brian Le", email = "brian.le@cern.ch"}]
dynamic = ["version", "description"]
dependencies = ["boost_histogram>=1.0.2",
                "awkward>=1.0",
                "uproot>=4.0",
                "mplhep",
                "numpy",
                "h5py==3.6.0",
                "psutil",
                "beartype"
                ]