[build-system]
requires = ["setuptools>=46.4.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pythium"
description = "An alternative analysis workflow that skips ROOT"
readme = "README.md"
authors = [{name = "Mohamed Aly", email = "mohamed.aly@cern.ch"},
           {name = "Brian Le", email = "brian.le@cern.ch"},
           {name = "Joshua Winter", email = "joshua.krystin.winter@cern.ch"},
           {name = "Konrad Malirz", email = "konrad.malirz@cern.ch"},
           {name = "Flavio Ryu", email = "flavio.ryu@cern.ch"}]
maintainers = [{name = "Mohamed Aly", email = "mohamed.aly@cern.ch"},
           {name = "Brian Le", email = "brian.le@cern.ch"},
           {name = "Joshua Winter", email = "joshua.krystin.winter@cern.ch"}]
requires-python = ">=3.7"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering :: Physics",
    "Typing :: Typed"
]

dynamic = ["version"]
dependencies = [
                "hist",
                "awkward>=1.0",
                "uproot4>=4.0",
                "mplhep",
                "numpy",
                "beartype",
                "schema",
                "dask",
                "distributed",
                "graphviz"
                ]


[project.optional-dependencies]
physics = ["vector"]
dev  = [
        "h5py==3.6.0",
        "psutil",
        "vector", 
        "pyarrow"
        ]

tests = [
        "pytest",
        "pytest-cov>>=2.6.2",
        "unittest",
        "check-manifest",
        "flake8",
        "flake8",
        "flake8-bugbear",
        "flake8-import-order",
        "flake8-print",
        "mypy",
        "pytype",
        "black",
        ]

docs = [
        "sphinx",
        "sphinx-rtd-theme",
        "sphinx-autodoc-typehints",
        ]


[project.urls]
homepage =  "https://github.com/MoAly98/Pythium/tree/main"
documentation = "https://pythium.readthedocs.io/en/main/"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pythium", "pythium.sklimming","pythium.histogramming", "pythium.scripts", "pythium.common"]

[tool.setuptools.dynamic]
version = {attr = "pythium.__version__"}

[project.scripts]
pythium-sklim = "pythium.scripts.sklim:main"
pythium-hist = "pythium.scripts.histogram:main"

[tool.black]
line-length = 100
target-versions = ["py36","py37","py38","py39","py310"]
extend-exclude = '''
( 
   ^/.*misc.*/*.py
   | ^/.*config.*/*.py
   | .*config.*.py
   | ^/docs/source/.*.py
   | ^/utils/.*.py
   | setup.py
)

'''