[metadata]
name = pythium
version = attr: pythium.__version_
author = Mohamed Aly, Brian Le, Konrad Malirz, Flavio Ryu, Joshua Winter
description = An alternative analysis workflow that skips ROOT
url =  https://github.com/MoAly98/Pythium/tree/main
author_email = mohamed.aly@cern.ch, brian.le@cern.ch, konrad.malirz@cern.ch, flavio.ryu@cern.ch, joshua.krystin.winter@cern.ch

[options]
packages = find:
package_dir = =src
python_requires = >=3.7
install_requires = 
    boost_histogram>=1.0.2
    awkward>=1.0
    uproot4
    mplhep
    numpy
    h5py==3.6.0
    psutil # To remove
    beartype # To remove

[options.packages.find]
where = src
[options.entry_points]
console_scripts = 
    sklim=scripts.sklim:main 
#hist= scripts.histogram:main